updates on edits to end section

--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -616,7 +616,7 @@ A potential similar specialism was evident from Dan's guidance of Toby to access
 This could have been picked up on and integrated into the design. While I did not do this, the confidence brought to the process to find resources from outside of teh walled garden of the provided resources prompted a change of game paradigm for another family who also made a top down / maze game in P3. -->
 
 <!-- In addition to the previous chapters observations....
-ADD IF RELEVANT - research on funds of knowledge motives or benefits of this behaviour may include: ... -->
+ADD IF RELEVANT - research on fThe process of exploring identity in this way surfaced the cheekiness of some young people and the pleasure they took in demonstrating their playful mischievousness. I began to make journal notes on this subject and talk to other games study practitioners. I began to ask the question can the surfacing maker types (as per player types) encourage awareness and celebrate the emerging practices that the community was producing.unds of knowledge motives or benefits of this behaviour may include: ... -->
 
 <!--
 Article on intangibility of game feel.2025-1-8-DiscussionConclusion
@@ -635,13 +635,9 @@ Article on intangibility of game feel.2025-1-8-DiscussionConclusion
 
 Within the emerging idioculture of the game-making sessions, and during playtesting in particular, the implementation of popular or novel GDPs by participant pairs or individuals is often spread through peer activity. Both documented (those part of provided resources) and novel GDPs (those introduced by participants) were transmitted between participants, enriching the games of participants. At times, participants were influenced by playing the games of others, and at times, they would request the direct help of peers to implement GDPs in their own games.
 
-As the process of playtesting emerged, community norms began to develop, some of which where influenced by home experience of game playing. Vignette 4 (V4.a) outlines the community norming of Madiha(p)'s game to conform to expected standards of a platform game.
+As the process of playtesting emerged, community norms began to develop, some of which where influenced by home experience of game playing. Vignette 4 (V4.a) outlines the community norming of Madiha(p)'s game to conform to expected standards of a platform game. In Vignette 1B, Toby's work adding 21 levels to his game is noticed by Bertie who then asks Toby, _"Can you show me how you add more levels on to yours?"_ The full exchange shows an example of the propagation of GDPs emerging from the process of community playtesting through a direct request. It is possible that Bertie's request to Toby is prompted by Bertie noticing Toby helping Nasrin and Harper add levels to their games. Toby's emerging role as a specialist that the community can draw on for practical help, and similar examples (see also that of Nasrin in Vignette 5), were welcomed by me as a way to reduce dependence on myself as a facilitator, or to provide an alternative to the instruction-based support documents.
 
-In part two of Vignette 1, Toby's work adding 21 levels to his game is noticed by Bertie who then asks Toby, _"Can you show me how you add more levels on to yours?"_
-
-The full exchange shows an example of the propagation of GDPs emerging from the process of community playtesting through a direct request. It is possible that Bertie's request to Toby is prompted by Bertie noticing Toby helping Nasrin and Harper add levels to their games. Toby's emerging role as a specialist that the community can draw on for practical help, and similar examples (see also that of Nasrin in Vignette 5), were welcomed by me as a way to reduce dependence on myself as a facilitator, or to provide an alternative to the instruction-based support documents.
-
-Other examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics.
+<!-- Other examples of propagating patterns include placing hazards in tricky places like a lava pit, the use of moving enemies and changes to jump dynamics. -->
 
 
 <!-- EVIDENCE? PRESENCE / FREQUENCY?   -->
@@ -654,103 +650,35 @@ Other examples of propagating patterns include placing hazards in tricky places 
 <!-- **New GDPs emerged from existing patterns through peer activity during playtesting** -->
 <!-- DEVELOP -->
 
-In addition to the propagation of GDPs offered in the menu of supporting documentation, other gameplay patterns and related design concepts emerged organically from the community. For example, Olive's concept of a level that eschews challenge and offers only rewards, a type of bonus stage pattern, emerged through playful experimentation (see Vignette 2). Similarly, the concept of a safe zone in the game of Pearl and Clive arrived as a direct result of adding a moving enemies GDP. The extensive use of that pattern dominated the game challenge to such an extent that it became essential for players to quickly identify and use 'safe zones'. These novel concepts may have emerged spontaneously or have a source in part from participants' funds of gaming knowledge. In either case, once the concept of safe zone or bonus level enters the linguistic and coding repertoire of this community of game makers, they may spread if other participants pick up on them. Even if other participants only noticed the use of GDPs and used approximate terminology to comment on them during playtesting, this form of activity can be seen as legitimate peripheral participation [@lave_situated_1991; @guzdial_imagineering_2006], and thus a helpful practice contributing to the emerging ecosystems of the learning community.
+In addition to the propagation of GDPs offered in the menu of supporting documentation, other gameplay patterns and related design concepts emerged organically from the community.  The concept of a safe zone in the game of Pearl and Clive arrived as a direct result of adding many _moving enemies_ in a way that it became essential for players to quickly identify and use 'safe zones' where enemies did not reach. As such this concept, not used in any facilitator provided resources, became used frequently in the playtesting of that game.  
 
+In another example, Tehillah's concept of a level that eschews challenge and offers only rewards emerged through playful experimentation (see Vignette 2). Susanna(p)'s alarm at the child's deletion of all elements of hazard shows she is to keen a sense of game balance to ensure a sense of challenge for the imagined player. "It's no fun having a game without any hazards to avoid." The child seems determined to remove all hazards. My understanding is that she is also aware of implications for game balance but is taking pleasure in this seeming destruction of the key challenge of the game as an act of disruptive play. Other players also created impossible or overly easy game levels. They seem to take pleasure from ignoring concepts of what should be done to maintain game balance and from the sense of shock from their current audience her parent. Going against this convention is a type of playful destruction in this context. The process mirrors play theory concept of playing against the game or dark play [@sutton-smith_ambiguity_2001]
 
+These novel concepts may have emerged spontaneously or have a source in part from participants' funds of gaming knowledge. In either case, once a concept like that of safe zone enters the linguistic and coding repertoire of this community of game makers, in a way that facilitates propagation based on in the interest of other participants.
 
+<!-- #### Interventions to facilitate emergent social and cultural activities in evolving idioculture -->
 
-<!-- **synthesis of this section** -->
-This section has explored the use of GDPs within strategies and processes that occur at a community level.
+The process of emergence of novel repertoires which drew on GDP concepts, and wider, existing practice aligned with the motivations of this study. Therefore to try to support their development I introduced some additional _social missions_ described in Chapter 5 and described in more detail in Appendix.makertypes. Paralleling Bartle's player types [@schneider_analysis_2016], the concept of _maker types_ addressed observations of the varied sub-goals which emerged in playtesting. Recalling the barriers to participation explored in Chapter 2, my rationale for exploring maker types with participants was to promote awareness of pluralistic programming process [@papert_epistemological_1990], and a message that when you are learning something novel and challenging, there is value in incorporating your existing working preferences and techniques in the process. Rather than proposing that these styles make up a rigid typology to be replicated in other settings, instead, in line with Gutierrez and Rogoff [-@gutierrez_cultural_2003, p.20] , that the process of co-constructing understanding and communication about learning styles can "support the changing nature of participation and the forms of assistance provided in joint activity."
 
+<!-- Begin discussion with reference to [@gutierrez_cultural_2003] on "Helping Students Learn: Having Styles or Participating in Practices", and a careful statement to avoid over generalisation here, but at the same time recognise the value of emerging practices and styles. -->
 
-
-
-## Discussion
-
-
-### Addressing GDPs in relation to processes of mediation and incorporation in repertoires of practice
-
-<!-- **TADS / sannino vs gutierrez - and the purpose of inclusivity / equity** -->
-
-This section begins an interpretation of the diverse roles of GDPs the game making activity using CHAT concepts, this analysis is continued in the following chapter. Addressing GDPs as a mediational tool. Chapter 5 outlined design decisions and this chapter explored the impact. For example, the uses of the quick start activities, tutorials and code snippets as supporting tools, if viewed in isolation can been as more straight forward, triangular form of subject, tool, object mediation (see Chapter 4 diagram). This chapter and the evolution of the learning design exposed tensions where existing meditational strategies or tools were insufficient and thus innovative form of mediation were needed. Elements of the innovation in the toolset of learning design from P1 to P2 based on emerging needs of the participants exemplify this (is an example needed). In line with Sannino[], this study frames such innovation within CHAT as transformational agency (see Chapter 7).  
-
-By way of contrast, Gutiérrez's [@gutierrez_developing_2008] focus on on movement of identity between settings repertoires of practice draws on the importance of wider cultural focus of the learning process, or the “cultural mediation of thinking” (Moll, 1998) cited in [@digiacomo_seven_2017] p.44. Gutiérrez's sees a role of facilitators to facilitate this via learning design.
-
-
-In this chapter the last section examining activity on cultural plane exposed, elements of transfer between different activity systems, supporting Gutiérrez's [@gutierrez_developing_2008] perspective  regarding the importance of transcending borders and linguistic practices between sites of learning. In these examples, the process of playtesting often served as a facilitative medium for a shared idioculture to emerge and, as such, became a significant part of the pedagogy of the learning design.
-DRAW ON A COLE idioculture SOURCE.
-
-
- While the design processes directly linked to implementing GDPs were among the most significant in the video data, others were present.
-
-In the following section I briefly explore some facilitator introduced community interactions as a way to prepare for a discussion in relation to the development of agency in the following chapter
-
-<!-- the role of playtesting and including warm-up games and session reflections -->
-
-<!-- are explored in relation to the development of agency in the following chapter. -->
-
-#### Interventions to facilitate emergent social and cultural activities in evolving idioculture
-
-To support the development of similar emerging practices which drew on FoK, I introduced, social missions, drama frame and concepts of maker types.
-
-I propose that new GDPs elements can be integrated with existing home repertoires of practice to form novel flexible design practices.
-
-**Maker styles**   
-
-I began to recognise the process of non-technical and non-GDP elements of the learning process being incorporated in emerging repertoires. This is especially noticeable in the above sections on use of FoK and division of labour.
-OTHER EXAMPLES
-
-Several of the observations in vignettes described above, especially those involving interpersonal guided participation, detail the interweaving of novel concepts and practices with existing repertoires. An example being the use of visual prototyping explored above and in more detail in appendix.prototyping.
-
-For examples in the Vignette of S and T's interaction we can see attributes of the child as a Glitcher. In terms of understanding of the game as a dynamic system, this is seen clearly in the parent's alarm at the child's deletion of all elements of hazard. The parent is keen to keep a sense of game balance to ensure a sense of challenge for the imagined player. "It's no fun having a game without any hazards to avoid." The child seems determined to remove all hazards. My understanding is that she is also aware of implications for game balance but is taking pleasure in this seeming destruction of the key challenge of the game as an act of disruptive play.
-
-WHERE TO PUT THIS EXAMPLE? HERE OR BEFORE? AND IF HERE DEVELOP ANALYSIS IN LINE WITH THEORY?
-
-
-Other players created impossible or overly easy game levels. They seem to take pleasure from ignoring concepts of what should be done to maintain game balance and from the sense of shock from their current audience her parent. Going against this convention is a type of playful destruction in this context. The process mirrors play theory concept of playing against the game or dark play [@sutton-smith_ambiguity_2001].
-
-Thus
-
-Similar to the way tools were modified to provide new affordances for participants, in P3 I began to encourage these process by introduced several activities to augment the affordances of the playtesting medium.
-
-This section returns to game making types explored in Chapter 5. TO DEVELOP
 
 <!-- In this chapter's discussion this wider focus on cultural elements is addressed via an exploration of flexible approaches to the design practice. -->
-
 
 <!-- And following that the link to inclusive linguistic element of the pedagogy which can be aligned with other inclusive practices of UDL. In this study the focus is less on aspects of ethnical cultural elements and more the those related to neurodiversity.
 IS THERE SPACE FOR THIS here - IF SO WHERE? - NEXT CHAPTER PROBABLY  -->
 
-**Side-missions**
 
-The process of exploring identity via side missions in this way surfaced the cheekiness of some young people and the pleasure they took in demonstrating their playful mischievousness. I began to make journal notes on this subject and talk to other games study practitioners. I began to ask the question can the surfacing maker types (as per player types) encourage awareness and celebrate the emerging practices that the community was producing.
+Thus, similar to the way tools were modified to provide new affordances for participants, in P3 I began to encourage these process by introduced a drama process incorporating _social side-missions_ to augment the affordances of the playtesting environment. The process of exploring identity via side missions in this way surfaced the cheekiness of some young people and the pleasure they took in demonstrating their playful mischievousness. Many of the social missions encouraged activity outside of strictly productive design activities: for example, the lively discussion about game playing in response to the mission to _find out the favourite games of 3 other people_.  In observations of video data, I was struck by the high degree of flexibility and variation present in participant behaviour. In the following section I begin an analysis of other emerging characteristics.  
 
+<!-- This section has explored the use of GDPs within strategies and processes that occur at a community level. -->
 
-In retrospect, many of the social missions explored above encouraged activity outside of strictly productive design activities. For example the lively discussion about game playing in response to the mission to _find out the favourite games of 3 other people_.
-
-**Discussion on Player types and side-missions**
-
-<!-- DATA REQUIRED FROM VIDEO!? -->
-
-The process of exploring identity in this way surfaced the cheekiness of some young people and the pleasure they took in demonstrating their playful mischievousness. I began to make journal notes on this subject and talk to other games study practitioners. I began to ask the question can the surfacing maker types (as per player types) encourage awareness and celebrate the emerging practices that the community was producing.
-
-Recalling the barriers to participation explored in Chapter 2, my rationale for this process was to promote awareness of pluralistic programming process [@papert_epistemological_1990].
+## Discussion
 
 
+<!-- the role of playtesting and including warm-up games and session reflections -->
 
-I wanted to try to communicate a message to participants that when you are learning something hard it is of value follow your own working preferences and try to discover a creative style that suits you.
-
-AND LINGUISTIC DEVELOPMENT? LATER?
-
-
-
-**Limits of maker types**
-
-Begin discussion with reference to [@gutierrez_cultural_2003] on "Helping Students Learn: Having Styles or Participating in Practices", and a careful statement to avoid over generalisation here, but at the same time recognise the value of emerging practices and styles.
-
-Thus I am not suggesting that these styles make up a ridgid typology to be replicated in other settings, instead, in line with Gutierrez and Rogoff [-@gutierrez_cultural_2003, p.20] , that the process of co-constructing understanding and communication about learning styles can "support the changing nature of participation and the forms of assistance provided in joint activity."
-
-
+<!-- are explored in relation to the development of agency in the following chapter. -->
 
 
 
@@ -758,57 +686,69 @@ Thus I am not suggesting that these styles make up a ridgid typology to be repli
 
 <!-- NOTE To restructure. -->
 
-Narrative, something interesting started to develop a flexible, flow based practice....
-Coming back to my motivations as a facilitator and links in the literature of CoL and Papert's Samba school.
+The last section identified the development and the value of flexible design processes in a way which invites discussion on how best to conceptualise these flexible approaches. Firstly it is of note to make the flow theory in my guiding motivations in terms of participant experience [@perttula_flow_2017]. As a facilitator, my design decisions were often guided by the desire to not detract from participant experience of flow, and thus their coding fluency and engagement in and identification with the overall game-making process. This section synthesises my observations on video data any my own journal reflections on this topic of designing for flow. Flow is however a highly-subjective experience and as such, there is a danger that I privilege my own interests in this analysis, and tendency that I reflect on in the concluding chapter.
 
-Intro; here I will cover observations of the characteristics of these emerging design practices, twinned design affordances  and links them with existing  conceptualisation within the literature. Including:
+<!-- A DESIGN FOR MENTALISTS BY A MENTALIST -->
 
-  - flexibility in design stage, jumping arbout in design cycles, rapidly responding to Feedback
-  - via division of labour, and making styles via incorporation of funds of knowledge, home interests
+<!-- Coming back to my motivations as a facilitator and links in the literature of CoL and Papert's Samba school. -->
+<!-- I will cover observations of the characteristics of these emerging design practices, twinned design affordances  and links them with existing  conceptualisation within the literature.  -->
+
+Beyond fluidity, I now identify and explore other characteristics of the emerging design practices and potential strategies to support them. These include: a flexible approach to _design stages_,
+
+  - flexibility in design stage, jumping about in design cycles, rapidly responding to Feedback
+  - via division of labour, and making styles via
+  - incorporation of funds of knowledge, home interests
   - via choice of patterns in the MENU
   - But restrictions on the genre and the template  
 
 
-In the previous chapter I outlined this learning design as aligned more with a step-based approach than a design-build-test one.  As mentioned in Chapter 3, the process of examining video data also did not align with common design thinking stages as I initially thought might be the case. The stages were instead fragmented and sometimes happened in parallel. In many interactions I observed improvisational approaches which incorporated ideation, planning, implementation and testing in space of a minute or so. If I had encouraged participants to follow prescribed design stages this may have restrict this flexibility in practice. This concern is echoed in research which critiques a similar, staged approach to creative writing in primary education using a writing cycle approach.  [@kuby_rhizomatic_2016]
 
 
-This section therefore describes a set of evolving and flexible design practices, partly as a counterpoint to design thinking stages.
 
-These practices includes emerging norms, DoL, and community behaviour.
-
+<!-- These practices includes emerging norms, DoL, and community behaviour. -->
 
 <!-- MOVE TO CHAP 3?
 As explored in the literature review design stages as a conceptual design tool is common in CS education, e.g. Resnick's creative learning spiral [@resnick_all_2007, p. 2]. In data analysis I created a coding theme based on a design cycle framework: Ask / Imagine, Plan, Create, Test, Improve, Share. When coding I observed that naturalistic practice rarely matched the progression of the design cycle.  -->
 
 
-**Observations and evidence on flexible design practice**
+**Observations and evidence on flexible design stages**
 
-As typified in vignette 1 and 5 , some younger participants in particular developed impressively fluid practice demonstrating extremely rapids shifts between code editing, game testing, authoring assets in online tools and migrating files often while talking with peers. Some older participants also showed rapid, responsive creativity. Grandad Clive quickly incorporated a boost to player health after a level after being given feedback during playtesting [EVIDENCE?].
+Observations of participant design behaviour did not align with common design thinking concepts or  advocated in design cycle frameworks  [@resnick_all_2007; @winarno_steps_2020-1; @dam_5_2024] as I initially thought might be the case. The stages were instead fragmented and sometimes happened in parallel. In many interactions I observed improvisational approaches which incorporated ideation, planning, implementation and testing in space of a minute or so. As typified in vignette 1 and 5 , some younger participants in particular developed impressively fluid practice demonstrating extremely rapids shifts between code editing, game testing, authoring assets in online tools and migrating files often while talking with peers. Some older participants also showed rapid, responsive creativity. Grandad Clive quickly incorporated a boost to player health after a level after being given feedback during playtesting  If I had encouraged participants to follow prescribed design stages this may have restrict this flexibility in practice [@kuby_rhizomatic_2016].
 
-At other times design processes were experimental with no clear end goal. In exploring sound making software Ed and Mark start a process of tinkering and messing about with the capability of the tools which spurs creativity. The joint improvised process created two different soundtracks. This sparks a new proposal to incorporate different soundtracks for different levels. Pairs often adopted a similar spirit of improvisation. In V7 Dan(p) makes a suggestion - "Use paper to design?" - to which Toby(c) replies "I'm just going with it."
-
-
-Addressing a separate aspect of reflection, in P2, I guided supporting student facilitators to ask what patterns participants were currently working on or had recently completed as a way of provoking informal reflection on project progress. Additionally in P3, GDPs were prominent in end of session reflections (see Vignette 10)
-
-**Lingua Franca return?:**
-The examples of this chapter show the importance of GDPS as a lingua franca, as a mediational strategy to facilitate these kinds of flexible responsive collaboration.
+<!-- This concern is echoed in research which critiques a similar, staged approach to creative writing in primary education using a writing cycle approach.   -->
 
 
-**how to conceptualise**
-These observations of the value of flexible design processes, invite discussion on how best to conceptualise and support these flexible approaches. One potentially fruitful perspective is that ofrhizomatic design approaches [@de_freitas_classroom_2012]. Research exists on the promise of rhizomatic approaches design thinking in creative educational programmes [@biffi_chasing_2017-1]. However researchers identify significant competencies required including to "identify and synthesize the body of technical and even complex knowledge into a feasible structure" [@biffi_chasing_2017-1, p. 972], which are not well-aligned with the age group of this context.
+In Vignette 4 (see 4.c in particular), we see Ed break out of the more restrictive approach of plodding that his father advocate for to engage in experimental, improvised design processes with no clear end goal. His father joins in his exploration of sound making software. They start a process of tinkering and messing about with the capability of music making tools in a way which spurs creativity. In this case the joint improvised process sparks a new proposal to incorporate the two soundtracks they create in distinct levels. Other pairs often adopted a similar spirit of collaborative improvisation. In V7 Dan(p) makes a suggestion - "Use paper to design?" - to which Toby(c) replies "I'm just going with it."
 
-So instead of rhizomatic design, I propose that the tools, process and the community in this study mutually encourage an improvisational approach often referred to as _jamming_. While the processes identified are often improvised, there is a group element of the process where makers pick up techniques from other makers in the group. I suggest that such _jamming_ can be facilitated as a way of encouraging co-development of practices and making styles as proposed by Gutiérrez and Rogoff [@gutierrez_cultural_2003]
 
-Restrictions in creativity are important here. The restricted genre, pixel art format and templated approach act not only as technical  scaffolds but also aligns with research on the value of constraints in facilitating rapid creative improvisation in the areas of music and drama. The domains of programming, game jams and hackathons also use constraints in a similar way [@gabler2005prototype].
 
-Game Jams are accelerated events encouraging creative collaboration and innovation. While the event's premise is to promote collaboration, these events are inconsistent in their support and scaffolding of collaborative approaches [@goddard_playful_2014]. Game jams often prize innovation and originality. Recent research posits that Game Jams can be profitably used in formal education contexts [@aurava_game_2021], although there is scant guidance on how to address potentially problematic issues (list these).
 
-A complementary approach would be to significantly adapt the overall Game Jam format and to add greater scaffolding to the process as in the learning design of this research. Jamming in a musical context on the other hand takes place within an introduced but ideally familiar frame work. In musical terms this may be improvising around a familiar popular song, here it is adapting a template of a familiar game genre.
+
+**Tension between choice and restrictions**
+
+While supporting a flexible learner pathway is vital to this approach, the value of restrictions to creativity are also important here. The restricted genre, pixel art format and templated approach act not only as technical  scaffolds but also aligns with research on the value of constraints in facilitating rapid creative improvisation in the areas of music and drama. The domains of programming, game jams and hackathons also use constraints in a similar way [@gabler2005prototype].
+
+
+
+**How to conceptualise the process overall**
+
+
+<!-- One potentially fruitful perspective is that of rhizomatic design approaches [@de_freitas_classroom_2012]. Research exists on the promise of rhizomatic approaches design thinking in creative educational programmes [@biffi_chasing_2017-1]. However researchers identify significant competencies required including to "identify and synthesize the body of technical and even complex knowledge into a feasible structure" [@biffi_chasing_2017-1, p. 972], which are not well-aligned with the age group of this context. -->
+
+
+While the chaotic directions possible in design evoke a rhizomatic approach to learning [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic], I concur with Biffi et al [ @biffi_chasing_2017-1, p. 972] who identify significant competencies required which are not well-aligned with the age group of this context. Instead here I explore the tools, process and the community in this study mutually encourage an flexible approach often referred to as _jamming_. As explored in Chapter 2 existing research suggests that Game Jams can be profitably used in education contexts [@aurava_game_2021], although there is no agreement on the characteristics game jam pedagogy, and scant guidance on how to address potentially problematic issues (list these),
+
+The characteristics described above offer a contribution to the literature on Game Jam pedagogy and learning design of this study offers greater scaffolding to the process to facilitate the process of jamming as a way of encouraging co-development of practices and making styles as proposed by Gutiérrez and Rogoff [@gutierrez_cultural_2003].
+
+Jamming in a musical context takes place within an introduced but ideally familiar frame work. In musical terms this may be improvising around a familiar popular song, here it is adapting a template of a familiar game genre.
+
+While the processes identified are often improvised, there is a group element of the process where makers pick up techniques from other makers in the group.
+
 
 
 <!-- There are disparate resources available for game jams but due to the adult centric audience and mix of abilities they are less guided in nature than many supported design processes aimed at school age audiences. -->
 
-<!-- Within the concept of jamming, activity which is casual seemingly non-productive can still transmit useful information to guide collaborative practices. As per above and examples in Appedix ? Find. -->
+<!-- Within the concept of jamming, activity which is casual seemingly non-productive can still tran. I suggest that such _jamming_ can be facilitatedsmit useful information to guide collaborative practices. As per above and examples in Appedix ? Find. -->
 
 <!-- This section discusses some of the outcomes stemming from interventions and emergent participant responses in the area of peer and individual working practices. -->
 
@@ -841,15 +781,31 @@ The introduction introduced the summary table. I now return with a greater focus
 
 
 
-<!--
-| Participants use of Game Design Patterns (GDPs) from thematic analysis of video data                   |                                                                                                  |
-| ------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------ |
-| GDPs can assist project navigation, acting as a framework for code examples and step-by-step tutorials | GDPs can scaffold the ideation processes                                                         |
-| GDPs aid the process of division of labour                                                             | GDP concepts are used in emerging technical processes                                            |
-| GDPs facilitate learners to design for others                                                          | GDP concepts and language used in informal feedback for peers to influence modification of games |
-| GDPs are propagated into the community through playtesting                                             | GDPs facilitate the use of wider funds of knowledge from home and hobby settings                 |
-| GDPs in the personal appropriation of concepts and processes                                           |                                                                                                  |
-PERHAPS REPLACE THIS TABLE WITH THE MORE DESCRIPTIVE ONE LINKED BELOW. -->
+### Addressing GDPs in relation to theoretical understandings of processes of mediation and incorporation in repertoires of practice
+
+<!-- **TADS / sannino vs gutierrez - and the purpose of inclusivity / equity** -->
+
+This section begins an interpretation of the diverse roles of GDPs the game making activity using CHAT concepts, this analysis is continued in the following chapter. Addressing GDPs as a mediational tool. Chapter 5 outlined design decisions and this chapter explored the impact. For example, the uses of the quick start activities, tutorials and code snippets as supporting tools, if viewed in isolation can been as more straight forward, triangular form of subject, tool, object mediation (see Chapter 4 diagram). This chapter and the evolution of the learning design exposed tensions where existing meditational strategies or tools were insufficient and thus innovative form of mediation were needed. Elements of the innovation in the toolset of learning design from P1 to P2 based on emerging needs of the participants exemplify this (is an example needed). In line with Sannino[], this study frames such innovation within CHAT as transformational agency (see Chapter 7).  
+
+By way of contrast, Gutiérrez's [@gutierrez_developing_2008] focus on on movement of identity between settings repertoires of practice draws on the importance of wider cultural focus of the learning process, or the “cultural mediation of thinking” (Moll, 1998) cited in [@digiacomo_seven_2017] p.44. Gutiérrez's sees a role of facilitators to facilitate this via learning design.
+
+
+
+
+
+In this chapter the last section examining activity on cultural plane exposed, elements of transfer between different activity systems, supporting Gutiérrez's [@gutierrez_developing_2008] perspective  regarding the importance of transcending borders and linguistic practices between sites of learning.
+
+The examples of this chapter show the importance of GDPS as a lingua franca, as a mediational strategy to facilitate these kinds of flexible responsive collaboration. The process of playtesting often served as a facilitative medium for a shared language and idioculture to emerge and, as such, became a significant part of the pedagogy of the learning design.
+
+<!-- Several of the observations in vignettes described above, especially those involving interpersonal guided participation, detail the interweaving of novel concepts and practices with existing repertoires. An example being the use of visual prototyping explored above and in more detail in appendix.prototyping. -->
+
+The use of GDPs in design and in community interaction became integrated with other home and technical practices into an idioculture similar to Cole's description of the 5D. This chapter has demonstrated the variety of ways including those requiring little commitment. For example even if participants only noticed the use of GDPs and used approximate terminology to comment on them during playtesting, this form of activity can be seen as legitimate peripheral participation [@lave_situated_1991; @guzdial_imagineering_2006], and thus a helpful practice contributing to the emerging ecosystems of the learning community.
+
+
+<!-- While the design processes directly linked to implementing GDPs were among the most significant in the video data, others were present. -->
+<!-- DROP
+In the following section I briefly explore some facilitator introduced community interactions as a way to prepare for a discussion in relation to the development of agency in the following chapter -->
+
 
 
 
@@ -1196,3 +1152,8 @@ Returning to issues of inclusive approaches to pedagogy, the findings of this ch
 In many of the outlined uses of GDPs in chapter we can see processes at play that help bridge shifts in goals between activity systems and navigation between one sub-goal and the next. Any other analysis on the part of the participant can wait until the process becomes more familiar.
 
 This approach is aligned to inductive research processes. Finding useful abstractions only after immersing ones-self in the detail. Previously abstract concepts or processes become concrete through familiarisation via direct use and indirect observations through community participation.
+
+#### A thought on reflection
+
+FIND A SPACE FOR THIS???
+Addressing a separate aspect of reflection, in P2, I guided supporting student facilitators to ask what patterns participants were currently working on or had recently completed as a way of provoking informal reflection on project progress. Additionally in P3, GDPs were prominent in end of session reflections (see Vignette 10)
